Starting the mobile version of the site

--- a/index.html
+++ b/index.html
@@ -16,7 +16,14 @@
 </head>
 
 <body>
-
+    <header>
+        <div id="img-holder"></div>
+        <div id="top-words-button">
+            <h1>MODERN ART GALLERY</h1>
+            <p>The arts in the collection of the Modern Art Gallery all started from a spark of inspiration. Will these
+                pieces inspire you? Visit us and find out.</p>
+        </div>
+    </header>
 </body>
 
 </html>
