--- a/index.html
+++ b/index.html
@@ -17,11 +17,17 @@
 
 <body>
     <header>
-        <div id="img-holder"></div>
+        <div id="img-holder">
+            <img class="celso" src="imgs/mobile/image-hero@2x.jpg" alt="">
+        </div>
         <div id="top-words-button">
             <h1>MODERN ART GALLERY</h1>
             <p>The arts in the collection of the Modern Art Gallery all started from a spark of inspiration. Will these
                 pieces inspire you? Visit us and find out.</p>
+            <div id="button">
+                <p id="location-words">Our Location</p>
+                <div id="arrow"></div>
+            </div>
         </div>
     </header>
 </body>
