Made the link work

--- a/index.html
+++ b/index.html
@@ -24,10 +24,16 @@
             <h1>MODERN ART GALLERY</h1>
             <p>The arts in the collection of the Modern Art Gallery all started from a spark of inspiration. Will these
                 pieces inspire you? Visit us and find out.</p>
+
             <div id="button">
-                <p id="location-words">Our Location</p>
-                <div id="arrow"></div>
+                <a class="link" href="https://www.youtube.com/">
+                    <p id="location-words">OUR LOCATION</p>
+                    <div id="arrow-Holder">
+                        <img class="arrow" src="imgs/icon-arrow-right.svg" alt="">
+                    </div>
+                </a>
             </div>
+
         </div>
     </header>
 </body>
