positioned the location word

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
             <div id="button">
                 <a class="link" href="https://www.youtube.com/">
-                    <p id="location-words">OUR LOCATION</p>
+                    <p id="location-words"><span class="word-mover">OUR LOCATION</span></p>
                     <div id="arrow-Holder">
                         <img class="arrow" src="imgs/icon-arrow-right.svg" alt="">
                     </div>
