--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <div id="button">
                 <a class="link" href="https://www.youtube.com/">
                     <p id="location-words"><span class="word-mover">OUR LOCATION</span></p>
-                    <div id="arrow-Holder">
+                    <div id="arrow_Holder">
                         <img class="arrow" src="imgs/icon-arrow-right.svg" alt="">
                     </div>
                 </a>
@@ -37,5 +37,6 @@
         </div>
     </header>
 </body>
+<script src="script.js"></script>
 
 </html>
