I split the columns

--- a/index.html
+++ b/index.html
@@ -18,7 +18,12 @@
 <body>
     <header>
         <div id="img-holder">
-            <img class="celso" src="imgs/mobile/image-hero@2x.jpg" alt="">
+
+            <picture>
+                <source media="(min-width:768px )" srcset="imgs/tablet/image-hero@2x.jpg">
+                <img class="celso" src="imgs/mobile/image-hero@2x.jpg" alt="">
+
+            </picture>
         </div>
         <div id="top-words-button">
             <h1>MODERN ART GALLERY</h1>
