--- a/index.html
+++ b/index.html
@@ -26,17 +26,20 @@
             </picture>
         </div>
         <div id="top-words-button">
-            <h1>MODERN ART GALLERY</h1>
-            <p>The arts in the collection of the Modern Art Gallery all started from a spark of inspiration. Will these
-                pieces inspire you? Visit us and find out.</p>
+            <div class="tops-holder">
+                <h1>MODERN ART GALLERY</h1>
+                <p>The arts in the collection of the Modern Art Gallery all started from a spark of inspiration. Will
+                    these
+                    pieces inspire you? Visit us and find out.</p>
 
-            <div id="button">
-                <a class="link" href="https://www.youtube.com/">
-                    <p id="location-words"><span class="word-mover">OUR LOCATION</span></p>
-                    <div id="arrow_Holder">
-                        <img class="arrow" src="imgs/icon-arrow-right.svg" alt="">
-                    </div>
-                </a>
+                <div id="button">
+                    <a class="link" href="https://www.youtube.com/">
+                        <p id="location-words"><span class="word-mover">OUR LOCATION</span></p>
+                        <div id="arrow_Holder">
+                            <img class="arrow" src="imgs/icon-arrow-right.svg" alt="">
+                        </div>
+                    </a>
+                </div>
             </div>
 
         </div>
