Making the desktop version now

--- a/index.html
+++ b/index.html
@@ -17,9 +17,11 @@
 
 <body>
     <header>
+        <div id="blank"></div>
         <div id="img-holder">
 
             <picture>
+                <source media="(min-width:1300px )" srcset="imgs/desktop/image-hero@2x.jpg">
                 <source media="(min-width:768px )" srcset="imgs/tablet/image-hero@2x.jpg">
                 <img class="celso" src="imgs/mobile/image-hero@2x.jpg" alt="">
 
