--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         </div>
         <div id="top-words-button">
             <div class="tops-holder">
-                <h1>MODERN ART GALLERY</h1>
+                <h1 class="small">MODERN ART GALLERY</h1>
                 <p>The arts in the collection of the Modern Art Gallery all started from a spark of inspiration. Will
                     these
                     pieces inspire you? Visit us and find out.</p>
