--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
 
 <body>
     <header>
-        <div id="blank"></div>
+        <div id="blank">
+            <h1 class="big">MODERN ART GALLERY</h1>
+        </div>
         <div id="img-holder">
 
             <picture>
