--- a/index.html
+++ b/index.html
@@ -48,7 +48,16 @@
 
         </div>
     </header>
-    <main></main>
+    <main>
+        <picture>
+            <img class="knick-knacks" src="imgs/mobile/image-grid-1.jpg" alt="">
+        </picture>
+        <div class="day">
+            <h2>YOUR DAY AT THE GALLERY</h2>
+            <p>Wander through our distinct collections and find new insights about our artists. Dive into the details of
+                their creative process.</p>
+        </div>
+    </main>
 </body>
 <script src="script.js"></script>
 
