--- a/index.html
+++ b/index.html
@@ -50,10 +50,11 @@
     </header>
     <main>
         <picture>
+            <source media="(min-width:768px)" srcset="imgs/tablet/image-grid-1.jpg">
             <img class="knick-knacks" src="imgs/mobile/image-grid-1.jpg" alt="">
         </picture>
         <div class="day">
-            <h2>YOUR DAY AT THE GALLERY</h2>
+            <h2 class="first_H2">YOUR DAY <br> AT THE GALLERY</h2>
             <p>Wander through our distinct collections and find new insights about our artists. Dive into the details of
                 their creative process.</p>
         </div>
