--- a/index.html
+++ b/index.html
@@ -55,7 +55,8 @@
         </picture>
         <div class="day">
             <h2 class="first_H2">YOUR DAY <br> AT THE GALLERY</h2>
-            <p>Wander through our distinct collections and find new insights about our artists. Dive into the details of
+            <p class="day-p">Wander through our distinct collections and find new insights about our artists. Dive into
+                the details of
                 their creative process.</p>
         </div>
     </main>
