--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
             <picture>
                 <source media="(min-width:1300px )" srcset="imgs/desktop/image-hero@2x.jpg">
                 <source media="(min-width:768px )" srcset="imgs/tablet/image-hero@2x.jpg">
+
                 <img class="celso" src="imgs/mobile/image-hero@2x.jpg" alt="">
 
             </picture>
@@ -49,15 +50,19 @@
         </div>
     </header>
     <main>
-        <picture>
-            <source media="(min-width:768px)" srcset="imgs/tablet/image-grid-1.jpg">
-            <img class="knick-knacks" src="imgs/mobile/image-grid-1.jpg" alt="">
-        </picture>
-        <div class="day">
-            <h2 class="first_H2">YOUR DAY <br> AT THE GALLERY</h2>
-            <p class="day-p">Wander through our distinct collections and find new insights about our artists. Dive into
-                the details of
-                their creative process.</p>
+        <div id="main-items">
+            <picture>
+                <source media="(min-width:1300px )" srcset="imgs/desktop/image-grid-1.jpg">
+                <source media="(min-width:768px)" srcset="imgs/tablet/image-grid-1.jpg">
+                <img class="knick-knacks" src="imgs/mobile/image-grid-1.jpg" alt="">
+            </picture>
+            <div class="day">
+                <h2 class="first_H2">YOUR DAY <br> AT THE GALLERY</h2>
+                <p class="day-p">Wander through our distinct collections and find new insights about our artists. Dive
+                    into
+                    the details of
+                    their creative process.</p>
+            </div>
         </div>
     </main>
 </body>
