Gonna continue to work on this

--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
         </div>
         <div id="img-holder">
 
-            <picture>
-                <source media="(min-width:1300px )" srcset="imgs/desktop/image-hero@2x.jpg">
-                <source media="(min-width:768px )" srcset="imgs/tablet/image-hero@2x.jpg">
 
-                <img class="celso" src="imgs/mobile/image-hero@2x.jpg" alt="">
 
-            </picture>
+            <img class=" celso celso_small" src="imgs/mobile/image-hero@2x.jpg" alt="">
+            <img class=" celso celso_medium" src="imgs/tablet/image-hero@2x.jpg" alt="">
+            <img class=" celso celso_big" src="imgs/desktop/image-herop@2x.png" alt="">
+
+
         </div>
         <div id="top-words-button">
             <div class="tops-holder">
