--- a/index.html
+++ b/index.html
@@ -51,17 +51,22 @@
     </header>
     <main>
         <div id="main-items">
-            <picture>
-                <source media="(min-width:1300px )" srcset="imgs/desktop/image-grid-1.jpg">
-                <source media="(min-width:768px)" srcset="imgs/tablet/image-grid-1.jpg">
-                <img class="knick-knacks" src="imgs/mobile/image-grid-1.jpg" alt="">
-            </picture>
+
+
+            <img class="knick-knacks kk-small" src="imgs/mobile/image-grid-1.jpg" alt="">
+
             <div class="day">
                 <h2 class="first_H2">YOUR DAY <br> AT THE GALLERY</h2>
                 <p class="day-p">Wander through our distinct collections and find new insights about our artists. Dive
                     into
                     the details of
                     their creative process.</p>
+            </div>
+            <img class="muse-long" src="imgs/mobile/image-grid-2@2x.jpg" alt="">
+            <img class="muse-short" src="imgs/mobile/image-grid-3@2x.jpg" alt="">
+            <div class="inspired">
+                <h2>COME & BE INSPIRED</h2>
+                <p>We’re excited to welcome you to our gallery and see how our collections influence you.</p>
             </div>
         </div>
     </main>
