--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
             <img class=" celso celso_small" src="imgs/mobile/image-hero@2x.jpg" alt="">
             <img class=" celso celso_medium" src="imgs/tablet/image-hero@2x.jpg" alt="">
-            <img class=" celso celso_big" src="imgs/desktop/image-herop@2x.png" alt="">
+            <img class=" celso celso_big" src="imgs/desktop/image-hero@2x.jpg" alt="">
 
 
         </div>
@@ -56,7 +56,7 @@
             <img class="knick-knacks kk-small" src="imgs/mobile/image-grid-1.jpg" alt="">
 
             <div class="day">
-                <h2 class="first_H2">YOUR DAY <br> AT THE GALLERY</h2>
+                <h2>YOUR DAY <br> AT THE GALLERY</h2>
                 <p class="day-p">Wander through our distinct collections and find new insights about our artists. Dive
                     into
                     the details of
@@ -70,7 +70,16 @@
             </div>
         </div>
     </main>
-    <footer></footer>
+    <footer>
+        <h2 class="last_H2">MODERN <br> ART GALLERY</h2>
+        <p>The Modern Art Gallery is free to all visitors and open seven days a week from 8am to 9pm. Find us at 99 King
+            Street,Newport, USA.</p>
+        <div class="socials">
+            <img src="imgs/icon-facebook.svg" alt="">
+            <img src="imgs/icon-twitter.svg" alt="">
+            <img src="imgs/icon-instagram.svg" alt="">
+        </div>
+    </footer>
 </body>
 <script src="script.js"></script>
 
