finished the mobile version of the website
Lets start fixing up the tablet and desktop version

--- a/index.html
+++ b/index.html
@@ -75,9 +75,15 @@
         <p>The Modern Art Gallery is free to all visitors and open seven days a week from 8am to 9pm. Find us at 99 King
             Street,Newport, USA.</p>
         <div class="socials">
-            <img src="imgs/icon-facebook.svg" alt="">
-            <img src="imgs/icon-twitter.svg" alt="">
-            <img src="imgs/icon-instagram.svg" alt="">
+            <a href="https://www.facebook.com/">
+                <img class="social" src="imgs/icon-facebook.svg" alt="">
+            </a>
+            <a href="https://twitter.com/home">
+                <img class="social" src="imgs/icon-twitter.svg" alt="">
+            </a>
+            <a href="https://www.instagram.com/">
+                <img class="social" src="imgs/icon-instagram.svg" alt="">
+            </a>
         </div>
     </footer>
 </body>
