--- a/index.html
+++ b/index.html
@@ -63,8 +63,10 @@
                     the details of
                     their creative process.</p>
             </div>
-            <img class="muse-long" src="imgs/tablet/image-grid-2@2x.jpg" alt="">
-            <img class="muse-short" src="imgs/mobile/image-grid-3@2x.jpg" alt="">
+            <img class=" muse muse-long-small" src="imgs/mobile/image-grid-2@2x.jpg" alt="">
+            <img class=" muse  muse-long-medium" src="imgs/tablet/image-grid-2@2x.jpg" alt="">
+            <img class="muse-short  muse-short-small" src="imgs/mobile/image-grid-3@2x.jpg" alt="">
+            <img class="muse-short  muse-short-medium" src="imgs/tablet/image-grid-3@2x.jpg" alt="">
             <div class="inspired">
                 <h2>COME & BE INSPIRED</h2>
                 <p>We’re excited to welcome you to our gallery and see how our collections influence you.</p>
