Making some progress on the desktop version

--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
 
             <img class="knick-knacks kk-small" src="imgs/mobile/image-grid-1.jpg" alt="">
             <img class="knick-knacks kk-medium" src="imgs/tablet/image-grid-1.jpg" alt="">
+            <img class="knick-knacks kk-large" src="imgs/desktop/image-grid-1.jpg" alt="">
 
             <div class="day">
                 <h2>YOUR DAY <br> AT THE GALLERY</h2>
