Its getting better

--- a/index.html
+++ b/index.html
@@ -66,8 +66,10 @@
             </div>
             <img class=" muse muse-long-small" src="imgs/mobile/image-grid-2@2x.jpg" alt="">
             <img class=" muse  muse-long-medium" src="imgs/tablet/image-grid-2@2x.jpg" alt="">
+            <img class=" muse  muse-long-long" src="imgs/desktop/image-grid-2@2x.jpg" alt="">
             <img class="muse-short  muse-short-small" src="imgs/mobile/image-grid-3@2x.jpg" alt="">
             <img class="muse-short  muse-short-medium" src="imgs/tablet/image-grid-3@2x.jpg" alt="">
+            <img class="muse-short  muse-short-long" src="imgs/desktop/image-grid-3@2x.jpg" alt="">
             <div class="inspired">
                 <h2>COME & BE INSPIRED</h2>
                 <p>We’re excited to welcome you to our gallery and see how our collections influence you.</p>
