--- a/index.html
+++ b/index.html
@@ -77,19 +77,22 @@
         </div>
     </main>
     <footer>
-        <h2 class="last_H2">MODERN <br> ART GALLERY</h2>
-        <p>The Modern Art Gallery is free to all visitors and open seven days a week from 8am to 9pm. Find us at 99 King
-            Street,Newport, USA.</p>
-        <div class="socials">
-            <a href="https://www.facebook.com/">
-                <img class="social" src="imgs/icon-facebook.svg" alt="">
-            </a>
-            <a href="https://twitter.com/home">
-                <img class="social" src="imgs/icon-twitter.svg" alt="">
-            </a>
-            <a href="https://www.instagram.com/">
-                <img class="social" src="imgs/icon-instagram.svg" alt="">
-            </a>
+        <div class="footer-items">
+            <h2 class="last_H2">MODERN <br class="secret"> ART GALLERY</h2>
+            <p>The Modern Art Gallery is free to all visitors and open seven days a week from 8am to 9pm. Find us at 99
+                King
+                Street,Newport, USA.</p>
+            <div class="socials">
+                <a href="https://www.facebook.com/">
+                    <img class="social" src="imgs/icon-facebook.svg" alt="">
+                </a>
+                <a href="https://twitter.com/home">
+                    <img class="social" src="imgs/icon-twitter.svg" alt="">
+                </a>
+                <a href="https://www.instagram.com/">
+                    <img class="social" src="imgs/icon-instagram.svg" alt="">
+                </a>
+            </div>
         </div>
     </footer>
 </body>
