--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                     pieces inspire you? Visit us and find out.</p>
 
                 <div id="button">
-                    <a class="link" href="https://www.youtube.com/">
+                    <a class="link" href="map.html">
                         <p id="location-words"><span class="word-mover">OUR LOCATION</span></p>
                         <div id="arrow_Holder">
                             <img class="arrow" src="imgs/icon-arrow-right.svg" alt="">
@@ -95,7 +95,8 @@
             </div>
         </div>
     </footer>
+    <script src="script.js"></script>
 </body>
-<script src="script.js"></script>
+
 
 </html>
