--- a/map.html
+++ b/map.html
@@ -7,12 +7,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.8.0/dist/leaflet.css"
+        integrity="sha512-hoalWLoI8r4UszCkZ5kL8vayOGVae1oxXe/2A4AO6J9+580uKHDO3JdHb7NzwwzK5xr/Fs0W40kiNHxM9vyTtQ=="
+        crossorigin="" />
+    <script src="https://unpkg.com/leaflet@1.8.0/dist/leaflet.js"
+        integrity="sha512-BB3hKbKWOc9Ez/TAwyWxNXeoV9c1v6FIeYiBieIWkpLjauysF18NzgR1MBNBXf8/KABdlkX68nAhlwcDFLGPCQ=="
+        crossorigin=""></script>
     <title>Art Gallery Map</title>
 </head>
 
 <body>
-    <h1>Hello :)</h1>
-    <script src="script.js"></script>
+    <div id="map">
+        <div id="button">
+            <a class="link" href="index.html">
+                <p id="location-words"><span class="word-mover">BACK TO HOME</span></p>
+                <div id="arrow_Holder">
+                    <img class="arrow" src="imgs/icon-arrow-right.svg" alt="">
+                </div>
+        </div>
+        <script src="script.js"></script>
 </body>
 
 </html>
