Its coming along lol
Just gotta figure out this color thing

--- a/map.html
+++ b/map.html
@@ -17,15 +17,17 @@
 </head>
 
 <body>
+    <div id="button-map">
+        <a class="link" href="index.html">
+            <p id="location-words"><span class="word-mover">BACK TO HOME</span></p>
+            <div id="arrow_Holder">
+                <img class="arrow" src="imgs/icon-arrow-right.svg" alt="">
+            </div>
+        </a>
+    </div>
     <div id="map">
-        <div id="button">
-            <a class="link" href="index.html">
-                <p id="location-words"><span class="word-mover">BACK TO HOME</span></p>
-                <div id="arrow_Holder">
-                    <img class="arrow" src="imgs/icon-arrow-right.svg" alt="">
-                </div>
-        </div>
-        <script src="script.js"></script>
+    </div>
+    <script src="script.js"></script>
 </body>
 
 </html>
