Setting up the map info sections

--- a/map.html
+++ b/map.html
@@ -17,15 +17,48 @@
 </head>
 
 <body>
-    <div id="button-map">
-        <a class="link" href="index.html">
-            <p id="location-words"><span class="word-mover">BACK TO HOME</span></p>
-            <div id="arrow_Holder">
-                <img class="arrow" src="imgs/icon-arrow-right.svg" alt="">
+    <div id="container">
+        <div id="button-map">
+            <a class="link" href="index.html">
+                <p id="location-words"><span class="word-mover">BACK TO HOME</span></p>
+                <div id="arrow_Holder">
+                    <img class="arrow" src="imgs/icon-arrow-right.svg" alt="">
+                </div>
+            </a>
+        </div>
+        <div id="map">
+        </div>
+        <div id="location">
+            <h1>Our Location</h1>
+            <div class="street-info">
+                <h2>99 King Street</h2>
+                <p>Newport</p>
+                <p>RI 02840</p>
+                <p>United States of America</p>
+                <p>Our newly opened gallery is located near the Edward King House on 99 King Street, the Modern Art
+                    Gallery is free to all visitors and open seven days a week from 8am to 9pm.</p>
             </div>
-        </a>
-    </div>
-    <div id="map">
+        </div>
+        <footer id="map-end">
+            <div class="footer-items">
+                <h2 class="last_H2">MODERN <br class="secret"> ART GALLERY</h2>
+                <p>The Modern Art Gallery is free to all visitors and open seven days a week from 8am to 9pm. Find us at
+                    99
+                    King
+                    Street,Newport, USA.</p>
+                <div class="socials">
+                    <a href="https://www.facebook.com/">
+                        <img class="social" src="imgs/icon-facebook.svg" alt="">
+                    </a>
+                    <a href="https://www.instagram.com/">
+                        <img class="social" src="imgs/icon-instagram.svg" alt="">
+                    </a>
+                    <a href="https://twitter.com/home">
+                        <img class="social" src="imgs/icon-twitter.svg" alt="">
+                    </a>
+                </div>
+            </div>
+        </footer>
     </div>
     <script src="script.js"></script>
 </body>
