Nearly done the mobile map

--- a/map.html
+++ b/map.html
@@ -13,6 +13,11 @@
     <script src="https://unpkg.com/leaflet@1.8.0/dist/leaflet.js"
         integrity="sha512-BB3hKbKWOc9Ez/TAwyWxNXeoV9c1v6FIeYiBieIWkpLjauysF18NzgR1MBNBXf8/KABdlkX68nAhlwcDFLGPCQ=="
         crossorigin=""></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Big+Shoulders+Display:wght@900&family=Outfit:wght@300&display=swap"
+        rel="stylesheet">
     <title>Art Gallery Map</title>
 </head>
 
@@ -29,12 +34,12 @@
         <div id="map">
         </div>
         <div id="location">
-            <h1>Our Location</h1>
+            <h1 id="location-h1">OUR LOCATION</h1>
             <div class="street-info">
                 <h2>99 King Street</h2>
                 <p>Newport</p>
                 <p>RI 02840</p>
-                <p>United States of America</p>
+                <p class="united-states">United States of America</p>
                 <p>Our newly opened gallery is located near the Edward King House on 99 King Street, the Modern Art
                     Gallery is free to all visitors and open seven days a week from 8am to 9pm.</p>
             </div>
