Nearly ready to close this project

--- a/map.html
+++ b/map.html
@@ -34,14 +34,16 @@
         <div id="map">
         </div>
         <div id="location">
-            <h1 id="location-h1">OUR LOCATION</h1>
-            <div class="street-info">
-                <h2>99 King Street</h2>
-                <p>Newport</p>
-                <p>RI 02840</p>
-                <p class="united-states">United States of America</p>
-                <p>Our newly opened gallery is located near the Edward King House on 99 King Street, the Modern Art
-                    Gallery is free to all visitors and open seven days a week from 8am to 9pm.</p>
+            <div class="location-items">
+                <h1 id="location-h1">OUR LOCATION</h1>
+                <div class="street-info">
+                    <h2>99 King Street</h2>
+                    <p>Newport</p>
+                    <p>RI 02840</p>
+                    <p class="united-states">United States of America</p>
+                    <p>Our newly opened gallery is located near the Edward King House on 99 King Street, the Modern Art
+                        Gallery is free to all visitors and open seven days a week from 8am to 9pm.</p>
+                </div>
             </div>
         </div>
         <footer id="map-end">
