Made the exit button

--- a/map.html
+++ b/map.html
@@ -25,9 +25,9 @@
     <div id="container">
         <div id="button-map">
             <a class="link" href="index.html">
-                <p id="location-words"><span class="word-mover">BACK TO HOME</span></p>
-                <div id="arrow_Holder">
-                    <img class="arrow" src="imgs/icon-arrow-right.svg" alt="">
+                <p id="location-words" class="map-button-words"><span class="word-mover">BACK TO HOME</span></p>
+                <div id="arrow_Holder" class="map-arrow">
+                    <img class="arrow " src="imgs/icon-arrow-left.svg" alt="">
                 </div>
             </a>
         </div>
