finished the hover of socials on map

--- a/map.html
+++ b/map.html
@@ -55,13 +55,13 @@
                     Street,Newport, USA.</p>
                 <div class="socials">
                     <a href="https://www.facebook.com/">
-                        <img class="social" src="imgs/icon-facebook - Copy.svg" alt="">
+                        <img class="social social-map" src="imgs/icon-facebook - Copy.svg" alt="">
                     </a>
                     <a href="https://www.instagram.com/">
-                        <img class="social" src="imgs/icon-instagram - Copy.svg" alt="">
+                        <img class="social social-map" src="imgs/icon-instagram - Copy.svg" alt="">
                     </a>
                     <a href="https://twitter.com/home">
-                        <img class="social" src="imgs/icon-twitter - Copy.svg" alt="">
+                        <img class="social  social-map" src="imgs/icon-twitter - Copy.svg" alt="">
                     </a>
                 </div>
             </div>
